--- a/l10n/po/ja_JP/_includes/get-started-band-lightblue.html.po
+++ b/l10n/po/ja_JP/_includes/get-started-band-lightblue.html.po
@@ -3,69 +3,61 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-12-03 01:46+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-12-03 15:06+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 3.0\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
 
 #. type: Content of: <div><div><div><div><div><div>
 #: upstream/_includes/get-started-band-lightblue.html:5
-#, fuzzy
 msgid "1"
 msgstr "1"
 
 #. type: Content of: <div><div><div><div><div>
 #: upstream/_includes/get-started-band-lightblue.html:7
-#, fuzzy
 msgid "You need <a href=\"https://en.wikipedia.org/wiki/Comparison_of_integrated_development_environments#Java\" target=\"_blank\">an IDE</a> like <a href=\"https://www.jetbrains.com/idea/download/\">IntelliJ IDEA</a>, <a href=\"https://www.eclipse.org/downloads/\">Eclipse</a>, <a href=\"https://code.visualstudio.com/Download\">VSCode</a> or even <a href=\"https://spacevim.org/use-vim-as-a-java-ide/\">Vim</a> or <a href=\"http://spacemacs.org\">Emacs</a>!"
-msgstr "&lt;a href=\"https://en.wikipedia.org/wiki/Comparison_of_integrated_development_environments#Java\" target=\"_blank\"&gt;IDE&lt;/a&gt;が必要です。&lt;a href=\"https://www.jetbrains.com/idea/download/\"&gt;IntelliJ IDEA&lt;/a&gt;、&lt;a href=\"https://www.eclipse.org/downloads/\"&gt;Eclipse&lt;/a&gt;、&lt;a href=\"https://code.visualstudio.com/Download\"&gt;VSCode&lt;/a&gt;、さらには&lt;a href=\"https://spacevim.org/use-vim-as-a-java-ide/\"&gt;Vim&lt;/a&gt;や&lt;a href=\"http://spacemacs.org\"&gt;Emacs&lt;/a&gt;も必要です!"
+msgstr "<a href=\"https://www.jetbrains.com/idea/download/\">IntelliJ IDEA</a>や、<a href=\"https://www.eclipse.org/downloads/\">Eclipse</a>、<a href=\"https://code.visualstudio.com/Download\">VSCode</a>、あるいは<a href=\"https://spacevim.org/use-vim-as-a-java-ide/\">Vim</a>や<a href=\"http://spacemacs.org\">Emacs</a>といった<a href=\"https://en.wikipedia.org/wiki/Comparison_of_integrated_development_environments#Java\" target=\"_blank\">IDE</a>が必要です。"
 
 #. type: Content of: <div><div><div><div><div><div>
 #: upstream/_includes/get-started-band-lightblue.html:13
-#, fuzzy
 msgid "2"
 msgstr "2"
 
 #. type: Content of: <div><div><div><div><div><div>
 #: upstream/_includes/get-started-band-lightblue.html:16
-#, fuzzy
 msgid "You need a <a href=\"https://adoptopenjdk.net\" target=\"_blank\">a JDK {{ site.data.versions.jdk }}</a> (any distribution)"
-msgstr "&lt;a href=\"https://adoptopenjdk.net\" target=\"_blank\"&gt;a JDK {{ site.data.version.jdk }}&lt;/a&gt; (任意のディストリビューション)が必要です。"
+msgstr "<a href=\"https://adoptopenjdk.net\" target=\"_blank\">JDK {{ site.data.versions.jdk }}</a> (どのディストリビューションでも可) が必要です。"
 
 #. type: Content of: <div><div><div><div><div><div>
 #: upstream/_includes/get-started-band-lightblue.html:19
-#, fuzzy
 msgid "Optionally get <a href=\"https://www.graalvm.org/\" target=\"_blank\">GraalVM</a> {{ site.data.versions.graalvm }} for native compilation"
-msgstr "オプションとして、ネイティブコンパイルのために&lt;a href=\"https://www.graalvm.org/\" target=\"_blank\"&gt;GraalVM&lt;/a&gt; {{ site.data.version.graalvm }}を取得します。"
+msgstr "オプションとして、ネイティブコンパイルのために<a href=\"https://www.graalvm.org/\" target=\"_blank\">GraalVM</a> {{ site.data.versions.graalvm }} が必要です"
 
 #. type: Content of: <div><div><div><div><div><div>
 #: upstream/_includes/get-started-band-lightblue.html:26
-#, fuzzy
 msgid "3"
 msgstr "3"
 
 #. type: Content of: <div><div><div><div><div><div>
 #: upstream/_includes/get-started-band-lightblue.html:29
-#, fuzzy
 msgid "You need <a href=\"https://maven.apache.org/\" target=\"_blank\">Apache Maven {{ site.data.versions.maven }}</a> or <a href=\"https://gradle.org/\" target=\"_blank\">Gradle</a>"
-msgstr "&lt;a href=\"https://maven.apache.org/\" target=\"_blank\"&gt;Apache Maven {{ site.data.version.maven }}&lt;/a&gt;または&lt;a href=\"https://gradle.org/\" target=\"_blank\"&gt;Gradle&lt;/a&gt;が必要です。"
+msgstr "<a href=\"https://maven.apache.org/\" target=\"_blank\">Apache Maven {{ site.data.versions.maven }}</a> もしくは<a href=\"https://gradle.org/\" target=\"_blank\">Gradle</a> が必要です"
 
 #. type: Content of: <div><div><div><div><div><div>
 #: upstream/_includes/get-started-band-lightblue.html:36
-#, fuzzy
 msgid "4"
 msgstr "4"
 
 #. type: Content of: <div><div><div><div><div><div>
 #: upstream/_includes/get-started-band-lightblue.html:39
-#, fuzzy
 msgid "<a href=\"https://code.quarkus.io\">Start Coding</a> with Quarkus {{ site.data.versions.quarkus.version }} [<a href=\"{{ site.data.versions.quarkus.announce }}\">announce</a>|<a href=\"https://github.com/quarkusio/quarkus/releases/tag/{{ site.data.versions.quarkus.version }}\">changelog</a>]"
-msgstr "&lt;a href=\"https://code.quarkus.io\"&gt;Quarkusでコーディングを始めよう&lt;/a&gt; {{ site.data.version.quarkus.version }}。[&lt;a href=\"{{ site.data.version.quarkus.announce }}\"&gt;announce&lt;/a&gt;|&lt;a href=\"https://github.com/quarkusio/quarkus/releases/tag/{ site.data.version.quarkus.version }}\"&gt;changelog&lt;/a&gt;] です。"
+msgstr "Quarkus {{ site.data.versions.quarkus.version }} [<a href=\"{{ site.data.versions.quarkus.announce }}\">announce</a>|<a href=\"https://github.com/quarkusio/quarkus/releases/tag/{{ site.data.versions.quarkus.version }}\">changelog</a>] で<a href=\"https://code.quarkus.io\">コーディングを開始</a>"
