--- a/l10n/po/ja_JP/_includes/header-navigation.html.po
+++ b/l10n/po/ja_JP/_includes/header-navigation.html.po
@@ -3,171 +3,146 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-12-03 01:46+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-12-03 14:59+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 3.0\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
 
 #. type: Content of: <div><div><div>
 #: upstream/_includes/header-navigation.html:4
-#, fuzzy
 msgid "<input type=\"checkbox\" id=\"checkbox\" />"
-msgstr "&lt;input type=\"checkbox\" id=\"checkbox\" /&gt;。"
+msgstr "<input type=\"checkbox\" id=\"checkbox\" />"
 
 #. type: Content of: <div><div><div><nav><div><div><a>
 #: upstream/_includes/header-navigation.html:8
-#, fuzzy
 msgid "<a href=\"{{site.baseurl}}/\">"
-msgstr "&lt;a href=\"{{site.baseurl}}/\"&gt;となります。"
+msgstr "<a href=\"{{site.baseurl}}/\">"
 
 #. type: Attribute 'title' of: <div><div><div><nav><div><div><a><img>
 #: upstream/_includes/header-navigation.html:8
-#, fuzzy
 msgid "Quarkus"
 msgstr "Quarkus"
 
 #. type: Content of: <div><div><div><nav><div>
 #: upstream/_includes/header-navigation.html:10
-#, fuzzy
 msgid "<label class=\"nav-toggle\" for=\"checkbox\"> <i class=\"fa fa-bars\"></i> </label>"
-msgstr "&lt;label class=\"nav-toggle\" for=\"checkbox\"&gt; &lt;i class=\"fa fa-bar\"&gt;&lt;/i&gt; &lt;/label&gt; &lt;/label"
+msgstr "<label class=\"nav-toggle\" for=\"checkbox\"> <i class=\"fa fa-bars\"></i> </label>"
 
 #. type: Content of: <div><div><div><nav><div><ul><li>
 #: upstream/_includes/header-navigation.html:15
-#, fuzzy
 msgid "<span href=\"{{site.baseurl}}/about/\">About <i class=\"fas fa-chevron-down\"></i></span>"
-msgstr "&lt;span href=\"{{site.baseurl}}/about/\"&gt;会社概要 &lt;i class=\"fas fa-chevron-down\"&gt;&lt;/i&gt;&lt;/span&gt;。"
+msgstr "<span href=\"{{site.baseurl}}/about/\">Quarkustとは <i class=\"fas fa-chevron-down\"></i></span>"
 
 #. type: Content of: <div><div><div><nav><div><ul><li><ul><li>
 #: upstream/_includes/header-navigation.html:17
-#, fuzzy
 msgid "<a href=\"{{site.baseurl}}/about\" class=\"{% if page.url contains '/about/' %}active{% endif %}\">WHAT IS QUARKUS?</a>"
-msgstr "&lt;a href=\"{{site.baseurl}}/about\" class=\"{% if page.url contains '/about/' %}active{% endif %}\"&gt;WHAT IS QUARKUS?&lt;/a&gt;。"
+msgstr "<a href=\"{{site.baseurl}}/about\" class=\"{% if page.url contains '/about/' %}active{% endif %}\">QUARKUSとは何か?</a>"
 
 #. type: Content of: <div><div><div><nav><div><ul><li><ul><li>
 #: upstream/_includes/header-navigation.html:18
-#, fuzzy
 msgid "<a href=\"{{site.baseurl}}/container-first\" class=\"{% if page.url contains '/container-first/' %}active{% endif %}\">CONTAINER FIRST</a>"
-msgstr "&lt;a href=\"{{site.baseurl}}/container-first\" class=\"{% if page.url contains '/container-first/' %}active{% endif %}\"&gt;CONTAINER FIRST&lt;/a&gt;を表示します。"
+msgstr "<a href=\"{{site.baseurl}}/container-first\" class=\"{% if page.url contains '/container-first/' %}active{% endif %}\">コンテナ・ファースト</a>"
 
 #. type: Content of: <div><div><div><nav><div><ul><li><ul><li>
 #: upstream/_includes/header-navigation.html:19
-#, fuzzy
 msgid "<a href=\"{{site.baseurl}}/continuum\" class=\"{% if page.url contains '/continuum/' %}active{% endif %}\">REACTIVE</a>"
-msgstr "&lt;a href=\"{{site.baseurl}}/continuum\" class=\"{% if page.url contains '/continuum/' %}active{% endif %}\"&gt;REACTIVE&lt;/a&gt;。"
+msgstr "<a href=\"{{site.baseurl}}/continuum\" class=\"{% if page.url contains '/continuum/' %}active{% endif %}\">リアクティブ</a>"
 
 #. type: Content of: <div><div><div><nav><div><ul><li><ul><li>
 #: upstream/_includes/header-navigation.html:20
-#, fuzzy
 msgid "<a href=\"{{site.baseurl}}/developer-joy\" class=\"{% if page.url contains '/developer-joy/' %}active{% endif %}\">DEVELOPER JOY</a>"
-msgstr "&lt;a href=\"{{site.baseurl}}/developer-joy\" class=\"{% if page.url contains '/developer-joy/' %}active{% endif %}\"&gt;DEVELOPER JOY&lt;/a&gt;。"
+msgstr "<a href=\"{{site.baseurl}}/developer-joy\" class=\"{% if page.url contains '/developer-joy/' %}active{% endif %}\">開発者満足</a>"
 
 #. type: Content of: <div><div><div><nav><div><ul><li><ul><li>
 #: upstream/_includes/header-navigation.html:21
-#, fuzzy
 msgid "<a href=\"{{site.baseurl}}/kubernetes-native\" class=\"{% if page.url contains '/kubernetes-native/' %}active{% endif %}\">KUBERNETES NATIVE</a>"
-msgstr "&lt;a href=\"{{site.baseurl}}/kubernetes-native\" class=\"{% if page.url contains '/kubernetes-native/' %}active{% endif %}\"&gt;KUBERNETES NATIVE&lt;/a&gt;。"
+msgstr "<a href=\"{{site.baseurl}}/kubernetes-native\" class=\"{% if page.url contains '/kubernetes-native/' %}active{% endif %}\">KUBERNETES NATIVE</a>"
 
 #. type: Content of: <div><div><div><nav><div><ul><li><ul><li>
 #: upstream/_includes/header-navigation.html:22
-#, fuzzy
 msgid "<a href=\"{{site.baseurl}}/standards\" class=\"{% if page.url contains '/standards/' %}active{% endif %}\">STANDARDS</a>"
-msgstr "&lt;a href=\"{{site.baseurl}}/standards\" class=\"{% if page.url contains '/standards/' %}active{% endif %}\"&gt;STANDARDS&lt;/a&gt;"
+msgstr "<a href=\"{{site.baseurl}}/standards\" class=\"{% if page.url contains '/standards/' %}active{% endif %}\">標準</a>"
 
 #. type: Content of: <div><div><div><nav><div><ul><li>
 #: upstream/_includes/header-navigation.html:26
-#, fuzzy
 msgid "<span href=\"{{site.baseurl}}/learn/\">Learn <i class=\"fas fa-chevron-down\"></i></span>"
-msgstr "&lt;span href=\"{{site.baseurl}}/learn/\"&gt;学習する &lt;i class=\"fas fa-chevron-down\"&gt;&lt;/i&gt;&lt;/span&gt;。"
+msgstr "<span href=\"{{site.baseurl}}/learn/\">学ぶ<i class=\"fas fa-chevron-down\"></i></span>"
 
 #. type: Content of: <div><div><div><nav><div><ul><li><ul><li>
 #: upstream/_includes/header-navigation.html:28
-#, fuzzy
 msgid "<a href=\"{{site.baseurl}}/get-started\" class=\"{% if page.url contains '/get-started/' %}active{% endif %}\">GET STARTED</a>"
-msgstr "&lt;a href=\"{{site.baseurl}}/get-started\" class=\"{% if page.url contains '/get-started/' %}active{% endif %}\"&gt;GET STARTED&lt;/a&gt;。"
+msgstr "<a href=\"{{site.baseurl}}/get-started\" class=\"{% if page.url contains '/get-started/' %}active{% endif %}\">入門</a>"
 
 #. type: Content of: <div><div><div><nav><div><ul><li><ul><li>
 #: upstream/_includes/header-navigation.html:29
-#, fuzzy
 msgid "<a href=\"{{site.baseurl}}/guides\" class=\"{% if page.url contains '/guides/' %}active{% endif %}\">GUIDES</a>"
-msgstr "&lt;a href=\"{{site.baseurl}}/guides\" class=\"{% if page.url contains '/guides/' %}active{% endif %}\"&gt;GUIDES&lt;/a&gt;を表示します。"
+msgstr "<a href=\"{{site.baseurl}}/guides\" class=\"{% if page.url contains '/guides/' %}active{% endif %}\">ガイド</a>"
 
 #. type: Content of: <div><div><div><nav><div><ul><li><ul><li>
 #: upstream/_includes/header-navigation.html:30
-#, fuzzy
 msgid "<a href=\"{{site.baseurl}}/qtips\" class=\"{% if page.url contains '/qtips/' %}active{% endif %}\">\"Q\" TIP VIDEOS</a>"
-msgstr "&lt;a href=\"{{site.baseurl}}/qtips\" class=\"{% if page.url contains '/qtips/' %}active{% endif %}\"&gt;\"Q\" TIP VIDEOS&lt;/a&gt;。"
+msgstr "<a href=\"{{site.baseurl}}/qtips\" class=\"{% if page.url contains '/qtips/' %}active{% endif %}\">\"Q\" Tipsビデオ</a>"
 
 #. type: Content of: <div><div><div><nav><div><ul><li><ul><li>
 #: upstream/_includes/header-navigation.html:31
-#, fuzzy
 msgid "<a href=\"{{site.baseurl}}/books\" class=\"{% if page.url contains '/books/' %}active{% endif %}\">BOOKS</a>"
-msgstr "&lt;a href=\"{{site.baseurl}}/books\" class=\"{% if page.url contains '/books/' %}active{% endif %}\"&gt;BOOKS&lt;/a&gt;を表示します。"
+msgstr "<a href=\"{{site.baseurl}}/books\" class=\"{% if page.url contains '/books/' %}active{% endif %}\">書籍</a>"
 
 #. type: Content of: <div><div><div><nav><div><ul><li>
 #: upstream/_includes/header-navigation.html:35
-#, fuzzy
 msgid "<span href=\"{{site.baseurl}}/learn/\">Community <i class=\"fas fa-chevron-down\"></i></span>"
-msgstr "&lt;span href=\"{{site.baseurl}}/learn/\"&gt;Community &lt;i class=\"fas fa-chevron-down\"&gt;&lt;/i&gt;&lt;/span&gt;。"
+msgstr "<span href=\"{{site.baseurl}}/learn/\">コミュニティ<i class=\"fas fa-chevron-down\"></i></span>"
 
 #. type: Content of: <div><div><div><nav><div><ul><li><ul><li>
 #: upstream/_includes/header-navigation.html:37
-#, fuzzy
 msgid "<a href=\"{{site.baseurl}}/support/\" class=\"{% if page.url contains '/support/' %}active{% endif %}\">SUPPORT</a>"
-msgstr "&lt;a href=\"{{site.baseurl}}/support/\" class=\"{% if page.url contains '/support/' %}active{% endif %}\"&gt;SUPPORT&lt;/a&gt;。"
+msgstr "<a href=\"{{site.baseurl}}/support/\" class=\"{% if page.url contains '/support/' %}active{% endif %}\">サポート</a>"
 
 #. type: Content of: <div><div><div><nav><div><ul><li><ul><li>
 #: upstream/_includes/header-navigation.html:38
-#, fuzzy
 msgid "<a href=\"{{site.baseurl}}/blog\" class=\"{% if page.url contains '/blog/' %}active{% endif %}\">BLOG</a>"
-msgstr "&lt;a href=\"{{site.baseurl}}/blog\" class=\"{% if page.url contains '/blog/' %}active{% endif %}\"&gt;BLOG&lt;/a&gt;を表示します。"
+msgstr "<a href=\"{{site.baseurl}}/blog\" class=\"{% if page.url contains '/blog/' %}active{% endif %}\">ブログ</a>"
 
 #. type: Content of: <div><div><div><nav><div><ul><li><ul><li>
 #: upstream/_includes/header-navigation.html:39
-#, fuzzy
 msgid "<a href=\"{{site.baseurl}}/discussion\" class=\"{% if page.url contains '/discussion/' %}active{% endif %}\">DISCUSSION</a>"
-msgstr "&lt;a href=\"{{site.baseurl}}/discussion\" class=\"{% if page.url contains '/discussion/' %}active{% endif %}\"&gt;DISCUSSION&lt;/a&gt;をご覧ください。"
+msgstr "<a href=\"{{site.baseurl}}/discussion\" class=\"{% if page.url contains '/discussion/' %}active{% endif %}\">ディスカッション</a>"
 
 #. type: Content of: <div><div><div><nav><div><ul><li><ul><li>
 #: upstream/_includes/header-navigation.html:40
-#, fuzzy
 msgid "<a href=\"{{site.baseurl}}/insights\" class=\"{% if page.url contains '/insights/' %}active{% endif %}\">PODCAST</a>"
-msgstr "&lt;a href=\"{{site.baseurl}}/insights\" class=\"{% if page.url contains '/insights/' %}active{% endif %}\"&gt;PODCAST&lt;/a&gt;のご案内"
+msgstr "<a href=\"{{site.baseurl}}/insights\" class=\"{% if page.url contains '/insights/' %}active{% endif %}\">ポッドキャスト</a>"
 
 #. type: Content of: <div><div><div><nav><div><ul><li><ul><li>
 #: upstream/_includes/header-navigation.html:41
-#, fuzzy
 msgid "<a href=\"{{site.baseurl}}/events\" class=\"{% if page.url contains '/events/' %}active{% endif %}\">EVENTS</a>"
-msgstr "&lt;a href=\"{{site.baseurl}}/events\" class=\"{% if page.url contains '/events/' %}active{% endif %}\"&gt;EVENTS&lt;/a&gt;。"
+msgstr "<a href=\"{{site.baseurl}}/events\" class=\"{% if page.url contains '/events/' %}active{% endif %}\">イベント</a>"
 
 #. type: Content of: <div><div><div><nav><div><ul><li><ul><li>
 #: upstream/_includes/header-navigation.html:42
-#, fuzzy
 msgid "<a href=\"{{site.baseurl}}/newsletter\" class=\"{% if page.url contains '/newsletter/' %}active{% endif %}\">NEWSLETTER</a>"
-msgstr "&lt;a href=\"{{site.baseurl}}/newsletter\" class=\"{% if page.url contains '/newsletter/' %}active{% endif %}\"&gt;NEWSLETTER&lt;/a&gt; （ニュースレター"
+msgstr "<a href=\"{{site.baseurl}}/newsletter\" class=\"{% if page.url contains '/newsletter/' %}active{% endif %}\">ニュースレター</a>"
 
 #. type: Content of: <div><div><div><nav><div><ul><li><ul><li>
 #: upstream/_includes/header-navigation.html:43
-#, fuzzy
 msgid "<a href=\"{{site.baseurl}}/publications\" class=\"{% if page.url contains '/publications/' %}active{% endif %}\">PUBLICATIONS</a>"
-msgstr "&lt;a href=\"{{site.baseurl}}/publications\" class=\"{% if page.url contains '/publications/' %}active{% endif %}\"&gt;PUBLICATIONS&lt;/a&gt;をご覧ください。"
+msgstr "<a href=\"{{site.baseurl}}/publications\" class=\"{% if page.url contains '/publications/' %}active{% endif %}\">出版物</a>"
 
 #. type: Content of: <div><div><div><nav><div><ul><li><ul><li>
 #: upstream/_includes/header-navigation.html:44
-#, fuzzy
 msgid "<a href=\"{{site.baseurl}}/awards\" class=\"{% if page.url contains '/awards/' %}active{% endif %}\">AWARDS</a>"
-msgstr "&lt;a href=\"{{site.baseurl}}/awards\" class=\"{% if page.url contains '/awards/' %}active{% endif %}\"&gt;AWARDS&lt;/a&gt;"
+msgstr "<a href=\"{{site.baseurl}}/awards\" class=\"{% if page.url contains '/awards/' %}active{% endif %}\">受賞</a>"
 
 #. type: Content of: <div><div><div><nav><div><ul><li>
 #: upstream/_includes/header-navigation.html:48
-#, fuzzy
 msgid "<a href=\"https://code.quarkus.io\" class=\"button-cta secondary white\">Start Coding</a>"
-msgstr "&lt;a href=\"https://code.quarkus.io\" class=\"button-cta secondary white\"&gt;コーディングを始める&lt;/a&gt;。"
+msgstr "<a href=\"https://code.quarkus.io\" class=\"button-cta secondary white\">コーディングを開始</a>"
