--- a/l10n/po/ja_JP/about.md.po
+++ b/l10n/po/ja_JP/about.md.po
@@ -3,18 +3,18 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-12-01 21:12+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-12-03 18:58+0900\n"
+"Language: ja_JP\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 3.0\n"
 
 #. type: YAML Front Matter: layout
 #: upstream/about.md:1
@@ -32,13 +32,13 @@ msgstr ""
 #: upstream/about.md:1
 #, no-wrap
 msgid "What we mean by \"Supersonic Subatomic Java\"."
-msgstr ""
+msgstr "\"Supersonic Subatomic Java\"とはどういう意味ですか。"
 
 #. type: YAML Front Matter: title
 #: upstream/about.md:1
 #, no-wrap
 msgid "What is Quarkus?"
-msgstr ""
+msgstr "Quarkusとは何か?"
 
 #~ msgid "This is the base Jekyll theme. You can find out more info about customizing your Jekyll theme, as well as basic Jekyll usage documentation at [jekyllrb.com](https://jekyllrb.com/)\n"
 #~ msgstr "This is the base Jekyll theme. You can find out more info about customizing your Jekyll theme, as well as basic Jekyll usage documentation at [jekyllrb.com](https://jekyllrb.com/)\n"
