--- a/l10n/po/ja_JP/awards.md.po
+++ b/l10n/po/ja_JP/awards.md.po
@@ -3,18 +3,18 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-12-01 21:12+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-12-03 18:58+0900\n"
+"Language: ja_JP\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 3.0\n"
 
 #. type: YAML Front Matter: layout
 #: upstream/awards.md:1
@@ -32,10 +32,10 @@ msgstr ""
 #: upstream/awards.md:1
 #, no-wrap
 msgid "Quarkus has been honored to receive multiple awards and recognition. We feel these are an affirmation of the great work being done by our dedicated community. We’ve started a trophy case to share the kudos with everyone."
-msgstr ""
+msgstr "Quarkusは、複数の賞と表彰を受けたことを光栄に思っています。 これらは、私たちの献身的なコミュニティによって行われている素晴らしい仕事に対する肯定であると私たちは感じています。 賞賛をみんなと共有するためにトロフィーケースを開始しました。"
 
 #. type: YAML Front Matter: title
 #: upstream/awards.md:1
 #, no-wrap
 msgid "Awards and Recognition"
-msgstr ""
+msgstr "賞と表彰"
