--- a/l10n/po/ja_JP/blog.md.po
+++ b/l10n/po/ja_JP/blog.md.po
@@ -3,18 +3,18 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-05-20 11:10+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-12-03 18:58+0900\n"
+"Language: ja_JP\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 3.0\n"
 
 #. type: YAML Front Matter: layout
 #: upstream/blog.md:1
@@ -26,7 +26,7 @@ msgstr ""
 #: upstream/blog.md:1
 #, no-wrap
 msgid "true"
-msgstr "true"
+msgstr ""
 
 #. type: YAML Front Matter: permalink
 #: upstream/blog.md:1
@@ -38,4 +38,4 @@ msgstr ""
 #: upstream/blog.md:1
 #, no-wrap
 msgid "Blog"
-msgstr ""
+msgstr "ブログ"
