--- a/l10n/po/ja_JP/discussion.md.po
+++ b/l10n/po/ja_JP/discussion.md.po
@@ -3,18 +3,18 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-12-01 21:12+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-12-03 19:14+0900\n"
+"Language: ja_JP\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 3.0\n"
 
 #. type: YAML Front Matter: layout
 #: upstream/discussion.md:1
@@ -32,10 +32,10 @@ msgstr ""
 #: upstream/discussion.md:1
 #, no-wrap
 msgid "Multiple ways to connect with others via forum, stack, chat, or email groups."
-msgstr ""
+msgstr "フォーラム、スタック、チャット、またはEメールグループを介して他の人と繋がる為の複数の方法"
 
 #. type: YAML Front Matter: title
 #: upstream/discussion.md:1
 #, no-wrap
 msgid "Discussion about Quarkus"
-msgstr ""
+msgstr "Quarkusについてディスカッション"
