--- a/l10n/po/ja_JP/get-started.md.po
+++ b/l10n/po/ja_JP/get-started.md.po
@@ -7,14 +7,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-12-01 21:12+0000\n"
-"PO-Revision-Date: 2021-07-01 21:23+0900\n"
+"PO-Revision-Date: 2021-12-03 19:19+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja_JP\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.4.2\n"
+"X-Generator: Poedit 3.0\n"
 
 #. type: YAML Front Matter: layout
 #: upstream/get-started.md:1
@@ -32,7 +32,7 @@ msgstr "/get-started/"
 #: upstream/get-started.md:1
 #, no-wrap
 msgid "It’s a snap to be up and running with Quarkus."
-msgstr ""
+msgstr "Quarkusを起動し実行するのは簡単です。"
 
 #. type: YAML Front Matter: title
 #: upstream/get-started.md:1
