--- a/l10n/po/ja_JP/qtips.md.po
+++ b/l10n/po/ja_JP/qtips.md.po
@@ -3,18 +3,18 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-12-01 21:12+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-12-03 19:23+0900\n"
+"Language: ja_JP\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 3.0\n"
 
 #. type: YAML Front Matter: layout
 #: upstream/qtips.md:1
@@ -32,10 +32,10 @@ msgstr ""
 #: upstream/qtips.md:1
 #, no-wrap
 msgid "Short informative videos that highlight unique technical points and instructions on how to get the most out of Quarkus."
-msgstr ""
+msgstr "Quarkusを最大限に活用するためのユニークな技術的ポイントと手順をハイライトした短い参考になるビデオ。"
 
 #. type: YAML Front Matter: title
 #: upstream/qtips.md:1
 #, no-wrap
 msgid "Quarkus \"Q\" Tips"
-msgstr ""
+msgstr "Quarkus \"Q\" Tips"
